🔧 chore: Update index.html and add robots.txt
The commit updates the `index.html` file by changing the title to "My iPad" and updating the meta description to "My iPad finder page". It also adds a new `robots.txt` file with the content "disallow: *".

--- a/index.html
+++ b/index.html
@@ -3,35 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>TheBox</title>
+    <title>My iPad</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="apartement in Leipzig AirBnB">
+    <meta name="description" content="My iPad finder page">
+    <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="shortcut icon"
         href="https://raw.githubusercontent.com/nullzueins/thebox-docs/main/_media/artwork/thebox-logo-art.png"
         type="image/png">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
 
-    <!-- OpenGraph -->
-    <meta property="og:title" content="TheBox - documentation">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://nullzueins.github.io/thebox-docs/">
-    <meta property="og:image" content="_media/thebox-opengraph.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@nullzueins">
-    <meta name="twitter:creator" content="@nullzueins">
-    <meta name="twitter:title" content="thebox - documentation">
-    <meta name="twitter:description" content="apartement in Leipzig AirBnB">
-    <meta name="twitter:image" content="_media/thebox-opengraph.png">
-
-    <!-- Google -->
-    <meta itemprop="name" content="TheBox - Appartement in Leinpzig">
-    <meta itemprop="description" content="apartement in Leipzig AirBnB">
-    <meta itemprop="image" content="_media/thebox-opengraph.png">
 
     <style>
         .grid {
