♻️ refactor: Remove unused CSS styles and update repository link
Explanation: The commit message describes the changes made in the git diff. In this case, the commit message can be "refactor: Remove unused CSS styles and update repository link". This reflects the removal of the unused CSS styles in the HTML file and the update to the repository link from 'nullzueins/thebox-docs' to 'vergissberlin/marvilinode-find'.

--- a/index.html
+++ b/index.html
@@ -9,40 +9,6 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-    <style>
-        .grid {
-            column-count: 2;
-            column-gap: 1rem;
-            background: #eee;
-            border-radius: 12px;
-            padding: 1rem;
-            margin-bottom: 2rem;
-            max-width: 1440px;
-        }
-
-        .grid figure {
-            display: inline-block;
-            margin: 0 0 0 0;
-            width: 100%;
-        }
-
-        .grid figcaption {
-            color: #444;
-            font-style: italic;
-            min-height: 3em;
-        }
-
-        .grid img {
-            width: 100%;
-            height: auto;
-        }
-
-        @media screen and (min-width: 480px) {
-            .grid {
-                column-count: 3;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -57,7 +23,7 @@
                 '/': '_coverpage.md',
                 '/en-gb/': '_coverpage.md'
             },
-            repo: 'nullzueins/thebox-docs',
+            repo: 'vergissberlin/marvilinode-find',
             loadSidebar: false,
             plugins: [],
             copyCode: {
