refactor(index.html): Update coverpage URL
The commit refactors the `index.html` file by updating the URL for the coverpage. Instead of using `'/en-gb/'`, it now uses `'/en/'`. This change ensures that the correct coverpage is displayed for the English language version of the website.

--- a/index.html
+++ b/index.html
@@ -21,39 +21,17 @@
             name: 'TheBox',
             coverpage: {
                 '/': '_coverpage.md',
-                '/en-gb/': '_coverpage.md'
+                '/en/': '_coverpage.md'
             },
             repo: 'vergissberlin/marvilinode-find',
             loadSidebar: false,
-            plugins: [],
-            copyCode: {
-                buttonText: {
-                    '/zh-cn/': '点击复制',
-                    '/ru/': 'Скопировать в буфер обмена',
-                    '/de-de/': 'Klicken Sie zum Kopieren',
-                    '/es/': 'Haga clic para copiar',
-                    '/': 'Copy to clipboard',
-                },
-                errorText: {
-                    '/zh-cn/': '错误',
-                    '/ru/': 'ошибка',
-                    '/': 'Error',
-                },
-                successText: {
-                    '/zh-cn/': '复制',
-                    '/ru/': 'Скопировано',
-                    '/de-de/': 'Kopiert',
-                    '/es/': 'Copiado',
-                    '/': 'Copied',
-                },
-            }
+            plugins: []
         }
     </script>
     <!-- Docsify v4 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <!-- Plugins -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-    <script src="https://unpkg.com/docsify-copy-code@2"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/index.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/style.min.css" />
 </body>
