🔧 chore: Update index.html
Updated the `index.html` file with the following changes:
- Removed the meta description tag.
- Updated the `basePath` to point to the new repository location.
- Changed the name of the app to "iPad finder".

This commit updates the configuration and settings of the `index.html` file to reflect the changes mentioned above.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>My iPad</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="My iPad finder page">
     <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
@@ -15,10 +14,10 @@
     <div id="app">Loading …</div>
     <script>
         window.$docsify = {
-            basePath: 'https://raw.githubusercontent.com/nullzueins/thebox-docs/main/',
+            basePath: 'https://raw.githubusercontent.com/vergissberlin/marvilinode-find/main/',
             maxLevel: 1,
             mergeNavbar: false,
-            name: 'TheBox',
+            name: 'iPad finder',
             coverpage: {
                 '/': '_coverpage.md',
                 '/en/': '_coverpage.md'
