Add separat langauge folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             name: 'iPad finder',
             coverpage: {
                 '/': '_coverpage.md',
-                '/en/': '_coverpage.md'
+                '/_lang/en/': '_coverpage.md'
             },
             repo: 'vergissberlin/marvilinode-find',
             loadSidebar: false,
