--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     <script>
         window.$docsify = {
             basePath: 'https://raw.githubusercontent.com/vergissberlin/marvilinode-find/main/',
-            maxLevel: 1,
-            mergeNavbar: false,
-            name: 'iPad finder',
+       
+            name: 'iPad finder', 
+            hideSidebar: true,
             coverpage: {
                 '/': '_coverpage.md',
                 '/_lang/en/': '_coverpage.md'
             },
             repo: 'vergissberlin/marvilinode-find',
-            loadSidebar: false,
             plugins: []
         }
     </script>
